# Python_C_API_Template

./: .pylintrc  CMakeLists.txt  pyproject.toml
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in
docs/sphinx/: conf.py.in  index.rst
docs/sphinx/PROJECT_NAME/: TITLE.rst  index.rst
include/: _PROJECT_NAME_config.h
src/PROJECT_NAME/: CMakeLists.txt  MODULE_NAME__MUST_BE_EXACTLY_SAME_NAME.cpp
