[build-system]
requires = ["setuptools", "cpymake"] #,"wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "<Project_Name>"
version = "0.0.1"
description = "<Description>"
readme = "README.rst"
requires-python = "<>=3.11>"
license = {file = "LICENSE"}
authors = [
  {name = "<Author_Name>", email = "<Author_Email>"},
]
classifiers = [
  "<Development Status :: 1 - Planning>",
  "<Intended Audience :: Science/Research>",
  "<License :: OSI Approved :: GNU General Public License v3 (GPLv3)>",
  "<Programming Language :: Python :: 3.x>",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "<Operating System :: OS Independent>",
]
dependencies = [
  #"numpy",
  #'importlib-metadata; python_version<"3.8"',
]

[project.urls]
#Homepage = "<https://example.com>"
#Documentation = "<https://readthedocs.org>"
Repository = "<https://github.com/Username/Project_Name.git>"
#Issues = "<https://github.com/me/spam/issues>"
#Changelog = "<https://github.com/me/spam/blob/master/CHANGELOG.md>"


#[project.scripts]
#<script_name> = "<package>.<module>:<method>"

[tool.black]
preview = true

#[tool.mypy]
#plugins = "numpy.typing.mypy_plugin"

[tool.pytest.ini_options]
#addopts = [
#  "--import-mode=importlib"
#]
testpaths = [
"tests"
]

#filterwarnings = [
  #'ignore:'
#]
